website: Publish release notes and binaries for 0.21.0.
Special changes to the download page for 0.21.0:

- Simplify installation script, as the 0.21.0 release archives now name the
  binary within them just "elvish".

- Add RISC-V to the CPU radiobox.

--- a/website/blog/index.toml
+++ b/website/blog/index.toml
@@ -2,6 +2,11 @@ prelude = "prelude"
 autoIndex = true
 
 [[articles]]
+name = "0.21.0-release-notes"
+title = "Elvish 0.21.0 release notes"
+timestamp = "2024-08-14"
+
+[[articles]]
 name = "0.20.1-release-notes"
 title = "Elvish 0.20.1 release notes"
 timestamp = "2024-02-14"
