--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,9 +12,9 @@ defaults:
 jobs:
 
   test:
-    # The default name will include the "go-version-is" parameter, whcih is
-    # derived from go-version and redundant, so we supply an explicit templated
-    # name.
+    # The default name will include the "go-version-is" parameter below, which
+    # is derived from go-version and redundant, so we supply an explicit
+    # templated name.
     name: Run tests (${{ matrix.os }}, ${{ matrix.go-version }})
     strategy:
       matrix:
@@ -53,6 +53,32 @@ jobs:
       with:
         name: cover-${{ matrix.os == 'ubuntu' && 'linux' || matrix.os }}
         path: cover
+
+  emulated_tests:
+    name: Run tests (emulated ${{ matrix.go-arch }})
+    strategy:
+      matrix:
+        go-arch: [riscv64, s390x]
+    env:
+      ELVISH_TEST_TIME_SCALE: 20
+      GOARCH: ${{ matrix.go-arch }}
+    runs-on: ubuntu-latest
+    steps:
+    - name: Set up emulator
+      run: |
+        sudo apt update
+        sudo apt install binfmt-support qemu-user-static
+        update-binfmts --display
+    - name: Checkout code
+      uses: actions/checkout@v4
+    - name: Set up Go
+      uses: actions/setup-go@v5
+      with:
+        go-version: 1.22.x
+    - name: Test with emulator
+      run: |
+        go test ./...
+        cd website; go test ./...
 
   # The purpose of running benchmarks in GitHub Actions is primarily to ensure
   # that the benchmark code runs and doesn't crash. GitHub Action runners don't
