--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,9 +111,10 @@ jobs:
       with:
         name: cover-${{ matrix.ostype }}
     - name: Upload coverage to codecov
-      uses: codecov/codecov-action@v3
+      uses: codecov/codecov-action@v4
       with:
         files: ./cover
+        token: ${{ secrets.CODECOV_TOKEN }}
         flags: ${{ matrix.ostype }}
 
   checks:
