--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,15 +44,21 @@ jobs:
       run: |
         go test -race ./...
         cd website; go test -race ./...
-    - name: Generate test coverage
+    - name: Generate unit test coverage
       if: matrix.go-version-is == 'new'
-      run: go test -coverprofile=cover -coverpkg=./pkg/... ./pkg/...
+      run: go test -coverprofile=cover-unit.txt -coverpkg=./pkg/... ./pkg/...
+    - name: Generate E2E test coverage
+      if: matrix.go-version-is == 'new'
+      run: |
+        mkdir cover-e2e
+        GOCOVERDIR=$PWD/cover-e2e go test -count 1 ./e2e
+        go tool covdata textfmt -i cover-e2e -o cover-e2e.txt
     - name: Save test coverage
       if: matrix.go-version-is == 'new'
       uses: actions/upload-artifact@v4
       with:
         name: cover-${{ matrix.os == 'ubuntu' && 'linux' || matrix.os }}
-        path: cover
+        path: cover-*.txt
 
   emulated_tests:
     name: Run tests (emulated ${{ matrix.go-arch }})
@@ -110,12 +116,18 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: cover-${{ matrix.ostype }}
-    - name: Upload coverage to codecov
+    - name: Upload unit test coverage to codecov
       uses: codecov/codecov-action@v4
       with:
-        files: ./cover
+        files: ./cover-unit.txt
         token: ${{ secrets.CODECOV_TOKEN }}
-        flags: ${{ matrix.ostype }}
+        flags: ${{ matrix.ostype }},unit
+    - name: Upload E2E test coverage to codecov
+      uses: codecov/codecov-action@v4
+      with:
+        files: ./cover-e2e.txt
+        token: ${{ secrets.CODECOV_TOKEN }}
+        flags: ${{ matrix.ostype }},e2e
 
   checks:
     name: Run checks
