vscode: Add basic styling support for styledown sources.
Now restricted to the style characters "*" and "R" as a proof of concept.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,8 +6,12 @@
 			"type": "extensionHost",
 			"request": "launch",
 			"args": [
-				"--extensionDevelopmentPath=${workspaceFolder}"
+				"--extensionDevelopmentPath=${workspaceFolder}/vscode"
 			],
+			"preLaunchTask": "npm: build - vscode",
+			"outFiles": [
+				"${workspaceFolder}/vscode/dist/*.js"
+			]
 		}
 	]
 }
