vscode: Support embedded styledown blocks in Elvish transcripts.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,8 @@
 			"preLaunchTask": "npm: build - vscode",
 			"outFiles": [
 				"${workspaceFolder}/vscode/dist/*.js"
-			]
+			],
+			"sourceMaps": true
 		}
 	]
 }
