--- a/vscode/package.json
+++ b/vscode/package.json
@@ -2,7 +2,7 @@
     "name": "elvish",
     "displayName": "Elvish",
     "description": "Elvish language support for Visual Studio Code",
-    "version": "0.4.1",
+    "version": "0.4.2",
     "publisher": "elves",
     "license": "BSD-2-Clause",
     "icon": "icon.png",
@@ -107,7 +107,7 @@
         "snippets": [
             {
                 "language": "elvish",
-                "path": "./snippets/snippets.json"
+                "path": "./snippets/elvish.json"
             }
         ],
         "commands": [
@@ -126,9 +126,33 @@
         },
         "keybindings": [
             {
-                "command": "elvish.updateTranscriptOutputForCodeAtCursor",
                 "key": "alt+enter",
+                "command": "elvish.updateTranscriptOutputForCodeAtCursor",
                 "when": "editorTextFocus && editorLangId =~ /^elvish(-transcript)?$/"
+            },
+            {
+                "key": "alt+o",
+                "command": "elvish.openTranscriptPromptBelow",
+                "when": "editorTextFocus && editorLangId == elvish-transcript"
+            },
+            {
+                "key": "alt+o",
+                "command": "vim.remap",
+                "args": {
+                    "commands": [
+                        {"command": "elvish.openTranscriptPromptBelow", "args": []}
+                    ],
+                    "after": ["i"]
+                },
+                "when": "editorTextFocus && editorLangId == elvish-transcript && vim.active && vim.mode == 'Normal'"
+            },
+            {
+                "key": "alt-k",
+                "command": "editor.action.insertSnippet",
+                "args": {
+                    "snippet": "send ${1:events}\n   render"
+                },
+                "when": "editorTextFocus && editorLangId == elvish-transcript"
             }
         ]
     },
