vscode: Bump dependency versions.

--- a/vscode/package.json
+++ b/vscode/package.json
@@ -140,9 +140,14 @@
                 "command": "vim.remap",
                 "args": {
                     "commands": [
-                        {"command": "elvish.openTranscriptPromptBelow", "args": []}
+                        {
+                            "command": "elvish.openTranscriptPromptBelow",
+                            "args": []
+                        }
                     ],
-                    "after": ["i"]
+                    "after": [
+                        "i"
+                    ]
                 },
                 "when": "editorTextFocus && editorLangId == elvish-transcript && vim.active && vim.mode == 'Normal'"
             },
@@ -166,13 +171,13 @@
         "vscode-languageclient": "^9.0.1"
     },
     "devDependencies": {
-        "@types/node": "^22.2.0",
+        "@types/node": "^22.13.10",
         "@types/vscode": "^1.65.0",
-        "@typescript-eslint/eslint-plugin": "^8.0.1",
-        "@typescript-eslint/parser": "^8.0.1",
-        "esbuild": "^0.23.0",
-        "eslint": "^9.8.0",
-        "typescript": "^5.5.4",
+        "@typescript-eslint/eslint-plugin": "^8.26.0",
+        "@typescript-eslint/parser": "^8.26.0",
+        "esbuild": "^0.25.0",
+        "eslint": "^9.22.0",
+        "typescript": "^5.8.2",
         "typescript-formatter": "^7.2.2"
     }
 }
